2009-04-28  Eric Blake  <ebb9@byu.net>

	scripts: normalize all timestamps to UTC
	* lib/compile (scriptversion): Update emacs hook.
	* lib/depcomp (scriptversion): Likewise.
	* lib/elisp-comp (scriptversion): Likewise.
	* lib/gnupload (scriptversion): Likewise.
	* lib/install-sh (scriptversion): Likewise.
	* lib/mdate-sh (scriptversion): Likewise.
	* lib/missing (scriptversion): Likewise.
	* lib/mkinstalldirs (scriptversion): Likewise.
	* lib/py-compile (scriptversion): Likewise.
	* lib/ylwrap (scriptversion): Likewise.

2009-04-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	silent-rules: fix alignment of less verbose output.
	* automake.in (define_verbose_var): Define `$silent_var' as
	VAR_ASIS, not VAR_PRETTY, to avoid squashing of multiple
	adjacent spaces.
	* tests/silent.test: Amend test.
	Report by Jan Engelhardt.

2009-04-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	manual: fix trivial grammar errors.
	* doc/automake.texi (Subpackages, Vala Support, Java)
	(Checking the Distribution, Timeline): Fix `a' vs. `an' errors
	and duplicate `the'.
	Report by Eric Blake.

	Indent rule commands consistently with a TAB.
	* lib/am/check.am ($(TEST_SUITE_LOG)): Consistently use TAB, not
	spaces, for indentation of commands, even if indentation may not
	be needed at all.
	* lib/am/texinfos.am (install-info-am): Likewise.
	* THANKS: Update.
	Prompted by report from John Calcote.

	parallel-tests: fix recheck* targets for non-GNU make.
	* lib/am/check.am (recheck recheck-html): Override AM_MAKEFLAGS
	to portably transport the TEST_LOGS settings through the
	recursive `make' invocations.  Fixes parallel-tests9.test
	failure with Solaris make.
	* tests/parallel-tests9.test: Also ensure that the test
	summary is correct for `recheck'.
	Suggestion by Akim Demaille.

2009-04-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid racy depmodes with universal builds.
	* m4/depend.m4 (_AM_DEPENDENCIES): If universal builds are used,
	avoid racy depmodes.