@@ -8123,6 +8123,17 @@ clean-local:
         -rm -rf testSubDir
 @end example
 
+Since @command{make} allows only one set of rules for a given target,
+a more extensible way of writing this is to use a separate target
+listed as a dependency:
+
+@example
+clean-local: clean-local-check
+.PHONY: clean-local-check
+clean-local-check:
+        -rm -rf testSubDir
+@end example
+
 As the GNU Standards aren't always explicit as to which files should
 be removed by which rule, we've adopted a heuristic that we believe
 was first formulated by Fran@,{c}ois Pinard:
