@@ -1,3 +1,13 @@
+2009-05-02  Bruno Haible  <bruno@clisp.org>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Recommend *-local hooks without commands, for extensibility.
+	* doc/automake.texi (Clean): Show how to write the clean-local
+	extension with separate phony target.
+	* tests/Makefile.am (clean-local-check): Practice what we preach
+	by marking this phony.  For consistency, rename from ...
+	(check-clean-local): ... this.
+
 2009-04-28  Eric Blake  <ebb9@byu.net>
 
 	scripts: normalize all timestamps to UTC
